# hedge-rs

./: .gitignore  Cargo.toml  Changelog.md  README.md
hedge/: Cargo.toml  README.md
hedge-amethyst/: Cargo.toml  README.md
hedge-amethyst/src/: lib.rs
hedge_amethyst/: Cargo.toml
src/: components.rs  data.rs  edge.rs  elements.rs  face.rs  function_sets.rs  handles.rs  iterators.rs  kernel.rs  lib.rs  mesh.rs  operations.rs  operator.rs  point.rs  proxy.rs  query.rs  tests.rs  traits.rs  utils.rs  vertex.rs
src/amethyst/: mod.rs
src/core/: edge.rs  face.rs  mod.rs  point.rs  vertex.rs
