[package]
name = "hedge"
version = "0.2.1"
authors = ["Chip Collier <photex@gmail.com>"]
description = "An index based half-edge mesh implementation."
keywords = ["halfedge", "half-edge", "mesh", "graphics", "meshes"]
categories = ["data-structures", "graphics"]
license = "MPL-2.0"
documentation = "https://docs.rs/hedge"
homepage = "https://github.com/photex/hedge"
repository = "https://github.com/photex/hedge"
readme = "README.md"
edition = "2018"

[dependencies]
log = "0.4"
hedge-amethyst = { optional=true, path="hedge-amethyst" }

[dev-dependencies]
env_logger = "0.6"

[features]
default = []
amethyst = ["hedge-amethyst"]
vulkan = ["hedge-amethyst/vulkan"]
metal = ["hedge-amethyst/metal"]
empty = ["hedge-amethyst/empty"]

[workspace]
members = [
    "hedge-amethyst"
]
