[package]
name = "hedge"
version = "0.5.0"
authors = ["Chip Collier <photex@gmail.com>"]
description = "An index based half-edge mesh implementation."
keywords = ["halfedge", "half-edge", "mesh", "graphics", "meshes"]
categories = ["data-structures", "graphics"]
license = "MPL-2.0"
documentation = "https://docs.rs/hedge"
homepage = "https://github.com/photex/hedge-rs"
repository = "https://github.com/photex/hedge-rs"
readme = "README.md"
edition = "2018"

[dependencies]
log = "0.4"
amethyst_assets = {optional=true, version="0.7.0"}
amethyst_core = {optional=true, version="0.6.0"}
amethyst_error = {optional=true, version="0.1.0"}
amethyst_rendy = {optional=true, version="0.1.0"}
err-derive = {optional=true, version="0.1"}

[dev-dependencies]
env_logger = "0.6"

[features]
default = []
amethyst = ["amethyst_core", "amethyst_error", "amethyst_assets", "err-derive"]
vulkan = ["amethyst_rendy/vulkan"]
metal = ["amethyst_rendy/metal"]
empty = ["amethyst_rendy/empty"]

