[package]
name = "hedge_amethyst"
version = "0.0.1"
authors = ["Chip Collier <photex@gmail.com>"]
description = "An adapter for using hedge meshes in Amethyst."
keywords = ["halfedge", "half-edge", "mesh", "graphics", "meshes"]
categories = ["data-structures", "graphics"]
license = "MPL-2.0"
documentation = "https://docs.rs/hedge-amethyst"
homepage = "https://github.com/photex/hedge"
repository = "https://github.com/photex/hedge"
readme = "README.md"
edition = "2018"

[dependencies]
log = "0.4"
amethyst_assets = "0.7.0"
amethyst_core = "0.6.0"
amethyst_error = "0.1.0"
amethyst_rendy = "0.1.0"
err-derive = "0.1"

[dev-dependencies]
env_logger = "0.6"

[features]
default = []
vulkan = ["amethyst_rendy/vulkan"]
metal = ["amethyst_rendy/metal"]
empty = ["amethyst_rendy/empty"]
